# lgca

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yaml  pyproject.toml  run.py
.github/workflows/: python-app.yml  python-publish.yml
docs/: change-log.md  changelog.md  index.md  notes.md
lgca/: enums.py  settings.py
lgca/automata/: __init__.py  fhp_i.py  fhp_ii.py  fhp_iii.py  fhp_one.py  fhp_three.py  fhp_two.py  hpp.py  lbm.py  lgca.py
lgca/config/: collisions.yaml  colors.json  colors.yaml  fhp_i.yaml  fhp_i.yaml.bak  fhp_ii.yaml  fhp_iii.yaml  fhpi.yaml  fhpii.yaml  fhpiii.yaml  hpp.yaml
lgca/config/obstacles/: wall.yaml
lgca/data/patterns/fhp/: collision.json  simple-pointy.json  wiki.json
lgca/data/patterns/hpp/: collision.json  hahm.json  quintana.json  simmul.json  simple.json  simul.json  wall.json  wiki-hpp-simulation.json  wiki.json
lgca/data/patterns/lbm/: obstacle.json
lgca/display/: __init__.py  base_grid.py  hexagonal_grid.py  square_grid.py  triangular_grid.py
lgca/entrypoints/: gen.py  generate.py  gui.py  lgca.py
lgca/utils/: add_shape.py  common.py  config_loader.py  initial_shape.py  table_generator.py
tests/: test_dummy.py
tests/data/: buick.phd.lookup.table.csv
tests/helpers/: __init__.py  test_utils.py  utils.py
tests/lgca/automata/: test_fhp_i.py  test_fhp_ii.py  test_fhp_iii.py  test_fhp_iiii.py  test_fhp_one.py  test_hpp.py  test_lbm.py
tests/lgca/display/: test_hexagonal_grid.py  test_square_grid.py  test_triangular_grid.py
tests/lgca/utils/: test_add_shape.py  test_common.py  test_config_loader.py  test_table_generator.py
